# dexter

./: .gitignore  Cargo.toml  README.md
.github/workflows/: cargo_clippy.yaml  rustfmt.yaml
cbz/: Cargo.toml
cbz-converter/: Cargo.toml
cbz-converter/src/: main.rs  pdf.rs  utils.rs
cbz-converter/src/mobi/: html5ever_parser.rs  mod.rs  tl_parser.rs
cbz-dexter-reindex/: Cargo.toml
cbz-dexter-reindex/src/: main.rs
cbz-merge/: Cargo.toml
cbz-merge/src/: main.rs
cbz-pack/: Cargo.toml
cbz-pack/src/: errors.rs  lib.rs  main.rs
cbz-reader/: Cargo.toml
cbz-reader/src/: lib.rs  main.rs
cbz-reindex/: Cargo.toml
cbz-reindex/src/: main.rs
cbz/src/: errors.rs  image.rs  lib.rs
dexter/: Cargo.toml
dexter-core/: Cargo.toml
dexter-core/src/: errors.rs  lib.rs
dexter-core/src/api/: archive_download.rs  get_chapter.rs  get_chapters.rs  get_image_links.rs  get_manga.rs  mod.rs  search.rs
dexter-gui/: Cargo.toml
dexter-gui/src/: main.rs
dexter-gui/ui/: main.60
dexter/src/: args.rs  main.rs  options.rs  types.rs
sinister/: Cargo.toml
sinister/src/: index.html  lib.rs  main.rs
sinister/src/components/: loader.rs  manga_list.rs  manga_view.rs  mod.rs  progress.rs
sinister2/: Cargo.toml
sinister2/src/: errors.rs  events.rs  lib.rs  main.rs
sinister2/src/widgets/: manga_search.rs  manga_view.rs  mod.rs
