[workspace]
resolver = "2"
members = [
  "dexter-core",
  "dexter",
  "cbz",
  "cbz-dexter-reindex",
  "cbz-merge",
  "cbz-reader",
  "cbz-pack",
]

[workspace.package]
rust-version = "1.68.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.69"
async-recursion = "1.0.2"
base64 = "0.21.0"
bytes = "1.4.0"
camino = "1.1.3"
cbz = { path = "./cbz" }
cbz-reader = { path = "./cbz-reader" }
clap = { version = "4.1.8", features = ["derive"] }
cli-table = "0.4.7"
dexter-core = { path = "./dexter-core" }
dialoguer = "0.10.3"
dioxus = "0.3.2"
dioxus-desktop = "0.3.0"
futures = "0.3.26"
glob = "0.3.1"
image = "0.24.5"
indicatif = "0.17.3"
pdf = "0.8.0"
reqwest = "0.11.14"
reqwest-middleware = "0.2.0"
reqwest-retry = "0.2.1"
sanitize-filename = "0.4.0"
serde = "1.0.152"
thiserror = "1.0.38"
tokio = "1.26.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
url = "2.3.1"
zip = "0.6.4"
