[workspace]
resolver = "2"
members = [
  "dexter",
  "dexter-core",
  "cbz",
  "cbz-dexter-reindex",
  "cbz-merge",
  "cbz-pack",
  "cbz-reader",
  "sinister",
]

[workspace.package]
rust-version = "1.72.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.70"
async-recursion = "1.0.4"
async-trait = "0.1.68"
base64 = "0.21.0"
bytes = "1.4.0"
camino = "1.1.4"
cbz = { path = "./cbz" }
cbz-reader = { path = "./cbz-reader" }
clap = { version = "4.2.5", features = ["derive"] }
cli-table = "0.4.7"
dexter-core = { path = "./dexter-core" }
dialoguer = "0.10.4"
dioxus = "0.3.2"
dioxus-desktop = "0.3.0"
eframe = "0.21.3"
egui = "0.21.0"
egui_extras = "0.21.0"
futures = "0.3.28"
glob = "0.3.1"
home = "0.5.5"
image = "0.24.6"
indicatif = "0.17.3"
pdf = "0.8.1"
reqwest = "0.11.17"
reqwest-middleware = "0.2.1"
reqwest-retry = "0.2.2"
sanitize-filename = "0.4.0"
serde = "1.0.160"
thiserror = "1.0.40"
tokio = { version = "1.28.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
url = "2.3.1"
zip = "0.6.4"
