[package]
name = "cbz-dexter-reindex"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
camino.workspace = true
clap.workspace = true
cbz.workspace = true
dexter-core.workspace = true
tracing-subscriber.workspace = true
tokio = { workspace = true, features = ["full"] }
zip.workspace = true
