[package]
name = "cbz-pack"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
camino.workspace = true
cbz.workspace = true
clap.workspace = true
tracing-subscriber.workspace = true
futures.workspace = true
glob.workspace = true
image.workspace = true
tracing.workspace = true
pdf = { workspace = true, optional = true }
sanitize-filename.workspace = true
tokio.workspace = true

[features]
default = ["pdf"]
pdf = ["dep:pdf"]
