[package]
name = "cbz-pack"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
camino.workspace = true
cbz = { workspace = true, features = ["clap"] }
clap.workspace = true
tracing-subscriber.workspace = true
glob.workspace = true
sanitize-filename.workspace = true
thiserror.workspace = true
tracing.workspace = true
