[package]
name = "cbz-reader"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
dexter-core.workspace = true
iced = { workspace = true, features = ["image"] }
iced_native.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "cbz-reader"
path = "src/main.rs"
