[package]
name = "cbz-reader"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
camino.workspace = true
cbz.workspace = true
clap = { workspace = true, features = ["derive"] }
dioxus.workspace = true
dioxus-desktop.workspace = true
env_logger.workspace = true
log.workspace = true
thiserror.workspace = true
zip.workspace = true
