[package]
edition = "2021"
name = "dexter"
version = "0.1.0"

[dependencies]
anyhow = "1.0.58"
async-recursion = "1.0.0"
cbz-reader = { path = "../cbz-reader" }
clap = { version = "3.2.7", features = ["derive"] }
cli-table = "0.4.7"
dexter-core = { path = "../dexter-core" }
dialoguer = "0.10.1"
env_logger = "0.9.0"
indicatif = "0.16.2"
log = "0.4.17"
tokio = { version = "1.19.2", features = ["full"] }
