[package]
name = "dexter"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-recursion.workspace = true
cbz-reader.workspace = true
clap = { workspace = true, features = ["derive"] }
cli-table.workspace = true
dexter-core.workspace = true
dialoguer.workspace = true
env_logger.workspace = true
indicatif.workspace = true
log.workspace = true
tokio = { workspace = true, features = ["full"] }
