[package]
name = "dexter"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-recursion.workspace = true
camino.workspace = true
clap = { workspace = true, features = ["derive"] }
cli-table.workspace = true
dexter-core.workspace = true
dialoguer.workspace = true
eco-cbz.workspace = true
eco-view.workspace = true
indicatif.workspace = true
sanitize-filename.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
