[package]
name = "sinister"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
camino.workspace = true
clap = { workspace = true, features = ["derive"] }
dexter-core.workspace = true
dioxus.workspace = true
dioxus-desktop.workspace = true
eco-cbz.workspace = true
home.workspace = true
isolang = { workspace = true, features = ["list_languages"] }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
zip.workspace = true
